更新 ESLint 和 Prettier 設定，調整 README 內容，修改 API 調用格式，新增環境變數範本

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,8 @@
     "comma-spacing": ["error", { "before": false, "after": true }],
     "comma-style": ["error", "last"],
     "computed-property-spacing": ["error", "never"],
-    "eol-last": ["error", "never"],
+    // "eol-last": ["error", "never"],
+    "eol-last": ["error", "always"],
     "func-call-spacing": ["error", "never"],
     "function-paren-newline": ["error", "multiline"],
     "indent": [
